Revise FoamFix configuration details
Updated FoamFix instructions to disable specific settings for skin bugs and log4j exploit fix.

--- a/mods-n-stuff/1.7.10.md
+++ b/mods-n-stuff/1.7.10.md
@@ -8,7 +8,7 @@
 | Careful Cast Corrector | - | Server |
 | CoreTweaks | Use [the GTNH version](https://github.com/GTNewHorizons/CoreTweaks), original is abandoned | Both |
 | Entity Culling | There is an edge case where Entity Culling can crash the game. See [this](https://github.com/CaffeineMC/sodium/issues/2985) for more info | Client |
-| FoamFix | - | Both |
+| FoamFix | Disable on foamfix.cfg B:mc18SkinSupport=true (to false) if skin bugs. Also disable B:log4jExploitFix=true (to false)  | Both |
 | Hodgepodge | - | Both |
 | Lumi | - | Both |
 | LWJGL3ify | May not work with all mods | Both |
